# nova-framework

./: CMakeLists.txt  README.md
include/: actionprovider.h  contentpage.h  notification.h  nova.h  progress.h  quickdialog.h  searchbar.h  settings.h  switcher.h  toolwindow.h  workbench.h
res/: quickdialog.ui  settingsdialog.ui  switcher.ui  workbench.ui
src/: actionprovider.cpp  contentpage.cpp  notification.cpp  progress.cpp  quickdialog.cpp  searchbar.cpp  settings.cpp  switcher.cpp  toolwindow.cpp  workbench.cpp
test/: CMakeLists.txt  novademo.cpp  novatest.cpp
